<resources>
    <string name="app_name">TrustCheck</string>
    <string name="understand">I understand</string>
    <string name="app_intro_skip_button">SKIP</string>
    <string name="app_intro_next_button">NEXT</string>
    <string name="app_intro_back_button">BACK</string>
    <string name="app_intro_done_button">DONE</string>

    <string name="demo_content">You can search for an application name that you doubt</string>
    <string name="demo_title">Lorem Ipsum</string>
    <string name="example_1">Example 1</string>
    <string name="walkthrough">Examples of <b> walkthrough/onboarding/first-time users </b> screen in android studio</string>
    <string name="example_2">Example 2</string>
    <string name="example_3">Example 3</string>
    <string name="example_4">Example 4</string>

    <string name="en_language">English</string>
    <string name="vi_language">Tiếng việt</string>


    <!-- BlacklistActivity -->
    <string name="blacklist_block_hidden_numbers">Block hidden numbers</string>
    <string name="blacklist_show_notifications">Show notifications</string>
    <string name="blacklist_about">About NoPhoneSpam</string>
    <string name="blacklist_permissions_required">NoPhoneSpam doesn\'t have the permissions to work.</string>
    <string name="blacklist_request_permissions">Request permissions</string>
    <plurals name="blacklist_call_details">
        <item quantity="one">Called at %2$s</item>
        <item quantity="other">%1$d calls, last: %2$s</item>
    </plurals>
    <string name="all_calls">Allow All Calls</string>
    <string name="allow_contacts">Allow Calls only from Contacts</string>
    <string name="allow_list">Allow Calls only from this list</string>
    <string name="block_list">Block all Calls from this list</string>
    <string name="block_all">Block All Calls</string>

    <string name="blacklist_import">Import Blacklist</string>
    <string name="blacklist_export">Export Blacklist</string>
    <string name="blacklist_exported_to">Exported to</string>

    <!-- EditActivity -->
    <string name="edit_add_number">Add number</string>
    <string name="edit_edit_number">Edit number</string>
    <string name="edit_save">Save</string>
    <string name="edit_cancel">Cancel</string>
    <string name="edit_delete">Delete</string>
    <string name="edit_name">Name</string>
    <string name="edit_name_hint">Annoying Spammer</string>
    <string name="edit_number">Number</string>
    <string name="edit_number_hint">+1-555-12345</string>
    <string name="edit_number_hints">Enter the number in +COUNTRY-NUMBER format (as Android would show in your dialer). Use \"*\" as a wildcard for zero or more digits, and \"#\" for exactly one digit.</string>
    <string name="edit_must_not_be_empty">Must not be empty</string>
    <string name="edit_changes_saved">Changes saved</string>

    <!-- CallReceiver -->

    <string name="receiver_notify_no_call_allowed">All calls are being blocked</string>
    <string name="receiver_notify_not_found_in_contacts">Number was not found in Contacts</string>
    <string name="receiver_notify_number_was_not_in_list">Number was not found in allowed caller\'s list</string>
    <string name="receiver_notify_number_was_in_list">Number was found in un-allowed caller\'s list</string>


    <string name="receiver_notify_call_rejected">Call rejected</string>
    <string name="receiver_notify_private_number">Private number</string>
    <string name="receiver_notify_unknown_caller">Unknown caller</string>
    <string name="call_blocking_unsupported">Can\'t block calls in this Android version</string>
    <!--main-->
    <string name="upgrade_title">Upgrade</string>


    <string name="block_call">" Block scam and spam callers"</string>
    <string name="block_message">" Block scam and spam messages"</string>
    <string name="warning_scam_app">"Scan scam applications "</string>
    <string name="warning_new_prototype">" New scams warning"</string>
    <string name="commitment">We do not upload any your contact data. Ours logic ony process in offline</string>
    <string name="ignore">Skip</string>
    <string name="got_it">Understood</string>
    <string name="get_started">Done</string>
    <string name="next">Next</string>
    <string name="phone_message">Phone calls, messages</string>
    <string name="find_image">Pick images</string>
    <string name="suggest">Tips</string>
    <string name="near_warning">Warning level:</string>
    <string name="detail">More</string>
    <string name="custom">Customize</string>
    <string name="complete">Done</string>
    <string name="received_new_warning">Subcribe news</string>
    <string name="ad_call_auto">Auto-call marketing</string>
    <string name="ad_message">Auto-msg marketing</string>
    <string name="upgrade">Please upgrade your subscription to use advanced features Starter .../tháng</string>
    <string name="support_developer">Please upgrade your subscription to use advanced features Starter .../tháng</string>
    <string name="language">Languages</string>
    <string name="choose_language">Selelect a language</string>
    <string name="warning_scam">Scam warning</string>
    <string name="very_big">High</string>
    <string name="menu">Menu</string>
    <string name="custom_app">Settings</string>
    <string name="update_package">Upgrade to Premium</string>
    <string name="donate">Feedback</string>
    <string name="result_for_find">Search result</string>
    <string name="report_scam">Warnings Level:</string>
    <string name="report">Warning</string>
    <string name="report_new">Report new case</string>
    <string name="news">News</string>
    <string name="received_news">Subcribe new warning cases</string>
    <string name="call_invite">Marketing automate call</string>
    <string name="message_ads">Message ads</string>
    <string name="warning_settings">"Scam app warning "</string>
    <string name="report_new_item">Report</string>
    <string name="slogan">Scam &amp; Spam Blocker</string>
    <string name="search_hint">" Search phone, name..."</string>
    <string name="attack_file">Attack images?</string>
    <string name="tip_hint">Tip:</string>
    <string name="pick_scam_category_lbl">Select one or mutiple options *</string>
    <string name="scam_method_lbl">Method</string>
    <string name="scam_title_lbl">Description</string>
    <string name="scam_new_unique_placeholder">Phone number, message or name...</string>
    <string name="scam_new_title_lbl">Scam/Spam method</string>
    <string name="scam_method_detail_hint">Method</string>
    <string name="scam_new_objective_lbl">Object</string>
    <string name="scan_app_lbl">Scam applicaton scan</string>
    <string name="recent_report_lbl">Recent report</string>
    <string name="recent_active_lbl">Last actived</string>
    <string name="not_exactly_lbl">Not correct?</string>
    <string name="title_activity_caller_info">CallerInfoActivity</string>
    <string name="channel_name">trustcheck</string>
    <string name="channel_description">trustcheck_desc</string>
    <string name="call_logs">Call logs</string>
</resources>