<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    tools:context=".ui.views.menu.MenuActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        app:expanded="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_bar_menu"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:itemTextColor="@color/main_color"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:gravity="center"
                android:text="@string/menu"
                android:fontFamily="@font/quicksand_bold"
                android:textAppearance="?attr/textAppearanceHeadline6" />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <TextView
            android:id="@+id/id_report_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/report_new"
            android:fontFamily="@font/quicksand_bold"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_lg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:background="@color/color_background_1" />

        <TextView
            android:id="@+id/id_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/custom_app"
            android:textColor="@color/text_color"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="@dimen/text_size_lg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:background="@color/color_background_1" />

        <TextView
            android:id="@+id/id_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/update_package"
            android:textColor="@color/text_color"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="@dimen/text_size_lg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:background="@color/color_background_1" />

        <TextView
            android:id="@+id/id_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/language"
            android:textColor="@color/text_color"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="@dimen/text_size_lg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:background="@color/color_background_1" />


        <TextView
            android:id="@+id/id_donate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/donate"
            android:textColor="@color/text_color"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="@dimen/text_size_lg" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>