<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    tools:context=".ui.views.language.MultiLanguageScreen">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        app:expanded="false"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_bar_language"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/language_menu"
            android:background="@color/color_bg"
            app:itemTextColor="@color/main_color"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/language"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/black"
                android:textAppearance="?attr/textAppearanceHeadline6" />
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/choose_language"
        android:fontFamily="@font/quicksand_bold"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_lg"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <TextView
        android:id="@+id/edt_en"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/margin_16"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_5"
        android:text="@string/en_language"
        android:fontFamily="@font/quicksand_semibold"
        android:background="@drawable/border_white"
        android:textSize="@dimen/text_size_lg"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_title" />

    <TextView
        android:id="@+id/edt_vi"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/margin_16"
        android:background="@drawable/border_main_color"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_5"
        android:text="@string/vi_language"
        android:fontFamily="@font/quicksand_semibold"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_lg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_en" />


</androidx.constraintlayout.widget.ConstraintLayout>