<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    tools:context=".ui.views.report.AddReportScreen">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        app:expanded="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:itemTextColor="@color/main_color"
            app:menu="@menu/report_menu"
            android:background="@color/color_bg"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/report_new"
                android:textAppearance="?attr/textAppearanceHeadline6" />
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scam_new_objective_lbl"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_lg" />

        <View
            android:layout_marginTop="@dimen/dp_3dp"
            android:layout_width="70dp"
            android:layout_height="2dp"
            android:background="@color/black"/>

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/scam_new_unique_placeholder"
            android:inputType="text"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:padding="10dp"
            android:textCursorDrawable="@color/white"
            android:textColorHint="@color/textSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />
       <LinearLayout
           android:paddingVertical="@dimen/dp_3dp"
           android:gravity="center"
           android:layout_gravity="end"
           android:orientation="horizontal"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">

           <ImageView
               android:layout_gravity="end"
               android:id="@+id/attach_icon"
               android:layout_width="@dimen/margin_24dp"
               android:layout_height="@dimen/margin_24dp"
               android:tooltipText="Attach file?"
               app:layout_constraintEnd_toEndOf="@+id/edtSearch"
               app:layout_constraintTop_toBottomOf="@+id/edtSearch"
               app:layout_constraintVertical_bias="0.0"
               app:srcCompat="@drawable/ic_baseline_attach_file_24" />

           <TextView
               android:layout_marginTop="10dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/attack_file"
               android:layout_gravity="center_horizontal"
               android:textColor="@color/textSecondary"
               android:textSize="16sp" />
       </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scam_title_lbl"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_lg" />

        <View
            android:layout_marginTop="@dimen/dp_3dp"
            android:layout_width="70dp"
            android:layout_height="2dp"
            android:background="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/scam_new_title_lbl"
            android:textColorHint="@color/textSecondary"
            android:textStyle="italic"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textCursorDrawable="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

<!--        <TextView-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/scam_method_lbl"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:textStyle="bold"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:textColor="@color/textSecondary"-->
<!--            android:textSize="16sp" />-->

<!--        <EditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="@dimen/dp_100"-->
<!--            android:layout_marginTop="@dimen/margin_8dp"-->
<!--            android:background="@drawable/edit_bg"-->
<!--            android:hint="@string/scam_method_detail_hint"-->
<!--            android:textColorHint="@color/white"-->
<!--            android:inputType="text"-->
<!--            android:padding="10dp"-->
<!--            android:textCursorDrawable="@color/blackNavy" />-->

        <TextView
            android:layout_marginTop="28dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_scam_category_lbl"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_lg" />

        <View
            android:layout_marginTop="@dimen/dp_3dp"
            android:layout_width="70dp"
            android:layout_height="2dp"
            android:background="@color/black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:paddingVertical="@dimen/margin_16"
            android:scrollbars="vertical"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_goneMarginTop="@dimen/margin_24dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>